# hotel-analytics-scraper

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-vercel.txt  requirements.txt  setup.py  vercel.json
.github/workflows/: hourly-scrape.yml
api/: index.py
docs/: anti_block_guide.md  architecture.md  selector_maintenance.md
frontend/: .env.example  index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: HotelBrowserView.tsx  LastScrapedPanel.tsx  MonthlyTrendsView.tsx  OverviewView.tsx  PriceRatingsView.tsx  ScrapeTriggerView.tsx  TopHotelsView.tsx  ui.tsx
monitoring/: prometheus.yml
scripts/: automated_scrape.py  docker_build.sh  run_all.sh  seed_db.py  vercel_build.py  vercel_build.sh
src/: __init__.py  main.py
src/api/: __init__.py  deps.py  main.py  schemas.py
src/api/routers/: hotels.py  meta.py  scrape.py  stats.py
src/automation/: __init__.py  runner.py
src/config/: __init__.py  selectors.yaml  settings.py  sources_registry.py
src/data/: sri_lanka_hotels.py
src/monitoring/: __init__.py  logger.py  metrics.py
src/parsers/: __init__.py  base.py  hotel_parser.py  review_parser.py
src/scrapers/: __init__.py  agoda.py  base.py  booking.py  datagovlk.py  expedia.py  google.py  runner.py  sltda.py  travel.py  travel_sites.py
src/storage/: __init__.py  base.py  csv_storage.py  database.py  json_storage.py  scrape_cache.py
src/utils/: __init__.py  city_ids.py  location.py  proxies.py  rate_limiter.py  retry.py  session.py  user_agents.py  validators.py
tests/: __init__.py  conftest.py  test_api.py  test_automation.py  test_booking_scraper.py  test_datagovlk_scraper.py  test_location.py  test_parsers.py  test_proxies.py  test_rate_limiter.py  test_scrape_cache.py  test_sltda_scraper.py  test_storage.py  test_validators_filter.py
tests/fixtures/: agoda_search.html  booking_search.html  sltda_report.html
